force-app/main/default/objects/CTRIntegraionList__mdt.object
<CustomObject>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRIntegraionList</label>
    <listViews>
        <fullName>view_all_data</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Endpoint__c</columns>
        <columns>Path__c</columns>
        <columns>Type__c</columns>
        <columns>Token__c</columns>
        <filterScope>Everything</filterScope>
        <label>view all data</label>
    </listViews>
</CustomObject>